<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cricketLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleType="center"
            android:src="@mipmap/cricket" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/cricketLogo"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cricketLogo"
            android:orientation="horizontal"
            tools:context=".MainActivity">>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/teamA"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/punjabs" />

                <TextView
                    android:id="@+id/scoreTeamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:text="@string/team_scoreA"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/sixRunsforTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/skyBlue"
                    android:text="@string/sixRuns" />

                <Button
                    android:id="@+id/fourRunsforTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/skyBlue"
                    android:text="@string/fourRuns" />

                <Button
                    android:id="@+id/singleRunforTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/skyBlue"
                    android:text="@string/singleRuns" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/teamB"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:src="@mipmap/superkings" />

                <TextView
                    android:id="@+id/scoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:text="@string/team_scoreB"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/sixRunsforTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/skyBlue"
                    android:text="@string/sixRuns" />

                <Button
                    android:id="@+id/fourRunsforTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/skyBlue"
                    android:text="@string/fourRuns" />

                <Button
                    android:id="@+id/singleRunforTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/skyBlue"
                    android:text="@string/singleRuns" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/teams"
            android:layout_marginTop="3dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/reset" />

    </RelativeLayout>


</ScrollView>